[package]
name = "bchnode-rs"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cashcontracts = { git = "https://github.com/slpdex/cashcontracts-rs" }
byteorder = "1.3.2"
async-std = "0.99.8"
error-chain = "0.12.1"
hex = "0.4.0"
rand = "0.7.0"
futures-channel-preview = "0.3.0-alpha.15"
futures-preview = "0.3.0-alpha.18"
