[package]
name = "cirrus-consensus"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cashcontracts = { git = "https://github.com/slpdex/cashcontracts-rs" }
byteorder = "1.3.2"
hex-literal = "0.2"
fasthash = "0.4.0"
