[package]
name = "cirrus-p2p"
version = "0.1.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirrus-peer = {path="../cirrus-peer"}
cashcontracts = { git = "https://github.com/slpdex/cashcontracts-rs" }
byteorder = "1.3.2"
rand = "0.7"
