[package]
name = "cirrus-utxo"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cashcontracts = { git = "https://github.com/slpdex/cashcontracts-rs" }
hyper = { version="0.13.0-alpha.4", features=["unstable-stream"] }
hex = "0.4"
futures-preview = "0.3.0-alpha.18"
futures-channel-preview = "0.3.0-alpha.15"
error-chain = "0.12.1"
byteorder = "1.3.2"
